prescription apis updated